src/System/RedPitaya/Rp.chs


module System.RedPitaya.Rp (
        RpMonad(..),
        
        
        
         
        
        
        
        
        
        
        
        
        -- * General
        rpinit,
        reset,
        release,
        pinsReset,
        getVersion,
        getError,

        -- * Digital IO
        DigitalPin(..), 

        PinState(..),
        setPinState ,
        getPinState,

        PinDirection(..),
        setPinDirection ,
        getPinDirection,

        -- * Analog IO
        AnalogPin(..),
        getPinValue,
        setPinValue,
        getPinValueRaw ,
        setPinValueRaw,
        getPinRange,

        Decimation(..), 
        setDecimation,
        getDecimation,
        getDecimationFactor,
        
        SamplingRate(..), 
        setSamplingRate,
        getSamplingRate,
        getSamplingRateHz,
        setAvaraging,
        getAvaraging,
        
        TriggerSource(..),
        setTriggerSrc,
        getTriggerSrc,
        
        TriggerState(..), 
        getTriggerState,
        getTriggerDelay,
        setTriggerDelayNs,
        getTriggerDelayNs,
        setTriggerLevel,
        getTriggerLevel,
        setTriggerLevelHyst,
        getTriggerLevelHyst,

        -- * Acquision 
        Channel(..), 
        TriggerSourceAcq(..),
        setAcqGain,
        getAcqGain,
        getAcqGainV,
        getAcqWritePointer,
        getAcqWritePointerAtTrg,
        acqStart,
        acqReset,
        getNormalisedDataPosition,
        getAckDataRaw,
        getAckDataV,
        getAckOldestDataRaw,
        getAckLatestDataRaw,
        getAckOldestDataV,
        getAckLatestDataV,
        getAcqBufSize,

        -- * Generator
        Waveform(..), 
        GeneratorMode(..), 
        generatorReset,
        generatorOutEnable,
        generatorOutDisable,
        generatorOutIsEnabled,
        generatorAmp,
        getGeneratorAmp,
        setGeneratorOffset,
        generatorFrequency,
        generatorPhase,
        generatorWaveForm,
        generatorDutyCycle,
        generatorMode,
        generatorBursts,
        generatorBurstsRepetitions,
        generatorBurstsPeriod,
        generatorTriggerSource,

        -- * Health 
        Health(..),
        getHealthValue,

        RpError(..), 
    )
where

import Foreign.C
import Foreign.Ptr
import Foreign.Marshal.Alloc
import Foreign.Storable
import Foreign.Marshal.Utils
import Foreign.Marshal.Array

import Data.Functor
import Control.Monad
import Data.Int
import Control.Monad.Except

#c
#include "rp.h"
#endc


-- | main monad functions of this lib lives in
type RpMonad = ExceptT RpError IO

-- maprX maps over final return value 
mapr0 :: (a->b) ->a->b
mapr0 = ($)

mapr1 :: (a->b) ->(c->a)->(c->b)
mapr1 = (.)

mapr2 :: (a->b) ->(c->d->a)->(c->d->b)
mapr2 = (.) . (.)

mapr3 :: (a->b) ->(c->d->e->a)->(c->d->e->b)
mapr3 = mapr2 . (.)

mapr4 :: (a->b) ->(c->d->e->f->a)->(c->d->e->f->b)
mapr4 = mapr3 . (.)

-- ftX makes n-tuple 2-tuple
ft1 :: (a) -> (a,())
ft1 (a) = (a,())

ft2 :: (a,b) -> (a,b)
ft2  = id

ft3 :: (a,b,c) -> (a,(b,c))
ft3 (a,b,c) = (a,(b,c))

ft4 :: (a,b,c,d) -> (a,(b,c,d))
ft4 (a,b,c,d) = (a,(b,c,d))

ft5 :: (a,b,c,d,e) -> (a,(b,c,d,e))
ft5 (a,b,c,d,e) = (a,(b,c,d,e))

errorMap :: (a -> (RpError,r)) -> IO a -> RpMonad r
errorMap ftfun etup = do
    t <- liftIO etup
    let (e,res) = ftfun t
    if (e /= Ok)
    then
        throwError e
    else
        return res


-- | Type representing digital input output pins.
{#enum rp_dpin_t as DigitalPin {underscoreToCase} with prefix = "RP_" deriving (Eq, Show) #}

-- | Type representing pin's high or low state (on/off).
{#enum rp_pinState_t as PinState {underscoreToCase} with prefix = "RP_" deriving (Eq, Show)#}

-- | Type representing pin's input or output direction.
{#enum rp_pinDirection_t as PinDirection {underscoreToCase} with prefix = "RP_" deriving (Eq, Show)#}

-- | Type representing analog input output pins.
{#enum rp_apin_t as AnalogPin {underscoreToCase} with prefix = "RP_" deriving (Eq, Show)#}

-- | Type representing system health information.
{#enum rp_health_t as Health {underscoreToCase} with prefix = "RP_" deriving (Eq, Show)#}

-- | Type representing shape of generated waveform
{#enum rp_waveform_t as Waveform {underscoreToCase} with prefix = "RP_WAVEFORM_" deriving (Eq, Show)#}

-- | Type representing mode of generated waveform
{#enum rp_gen_mode_t as GeneratorMode {underscoreToCase} with prefix = "RP_GEN_MODE_" deriving (Eq, Show)#}

--------------------------------------------

-- | Type representing source of trigger that is either ,
-- internal, 
-- external with positve edge, 
-- external with negative edge, 
-- external trigger gated burst
{#enum rp_trig_src_t as TriggerSource {underscoreToCase} with prefix = "RP_GEN_TRIG_" deriving (Eq, Show)#}


-- | Type representing Input Output channels.
{#enum rp_channel_t as Channel {underscoreToCase} with prefix = "RP_" deriving (Eq, Show)#}

-- | Type representing acquire signal sampling rate.
{#enum rp_acq_sampling_rate_t as SamplingRate {underscoreToCase} with prefix = "RP_" deriving (Eq, Show)#}


-- | Type representing decimation used at acquiring signal.
{#enum rp_acq_decimation_t as Decimation {underscoreToCase} with prefix = "RP_" deriving (Eq, Show)#}

-- | Type representing different trigger sources used at acquiring signal.
{#enum rp_acq_trig_src_t as TriggerSourceAcq {underscoreToCase} with prefix = "RP_TRIG_SRC_" deriving (Eq, Show)#}

-- | Type representing different trigger states.
{#enum rp_acq_trig_state_t as TriggerState {underscoreToCase} with prefix = "RP_TRIG_STATE_" deriving (Eq, Show)#}



-- | Type representing errors returend by each function
{#enum define RpError {
    RP_OK as Ok,
    RP_EOED as OpenEeprom,
    RP_EOMD as OpenMemDev,
    RP_ECMD as CloseMemDev,
    RP_EMMD as MapMemDev,
    RP_EUMD as UnampMemDev,
    RP_EOOR as ValueOutOfRange,
    RP_ELID as LedDir,
    RP_EMRO as ModifyingReadOnly,
    RP_EWIP as WritingInputPin,
    RP_EPN as InvalidPinNum,
    RP_UIA as UnitialisedInputArg,
    RP_FCA as FailedToFindCalibParam,
    RP_RCA as FailedToReadCalibParam,
    RP_BTS as BufferTooSmall,
    RP_EIPV as InvalidParameter,
    RP_EUF as UnsupportedFeature,
    RP_ENN as DataNotNormalised,
    RP_EFOB as FailedToOpenBus,
    RP_EFCB as FailedToCloseBus,
    RP_EABA as FailedToAcquireBus,
    RP_EFRB as FailedToReadBus,
    RP_EFWB as FailedToWriteBus}
    deriving (Eq, Show)
#}

peekMap :: Storable a => ( a -> b ) -> ( Ptr a -> IO b )
peekMap f = \x -> ( f <$>  (peek  x ))

peekEnum :: Enum a => Ptr CInt -> IO a
peekEnum =  peekMap (toEnum . fromIntegral )

peekInt :: (Integral a , Storable a) => Ptr a -> IO Integer
peekInt =  peekMap  toInteger

peekBool :: (Integral a , Storable a) => Ptr a -> IO Bool
peekBool =  peekMap  (/= 0)

-- | Initializes the library. It must be called first, before any other library method.
rpinit :: RpMonad ()
rpinit = mapr0 ( errorMap ft1) rp_Init
{#fun rp_Init  {} -> `RpError' #}


-- | Resets all modules. Typically called after `rpinit`
reset :: RpMonad ()
reset = mapr0 ( errorMap ft1) rp_Reset
{#fun rp_Reset {} -> `RpError' #}

-- | Releases the library resources. It must be called last, after library is not used anymore. Typically before
-- application exits.
release :: RpMonad ()
release = mapr0 ( errorMap ft1) rp_Release
{#fun rp_Release {} -> `RpError' #}

-- | Sets digital pins to default values. Pins DIO1_P - DIO7_P, RP_DIO0_N - RP_DIO7_N are set al OUTPUT and to LOW. LEDs are set to LOW/OFF
pinsReset :: RpMonad ()
pinsReset = mapr0 ( errorMap ft1) rp_DpinReset
{#fun rp_DpinReset {} -> `RpError' #}

-- | Retrieves the library librp version number
getVersion :: RpMonad String
getVersion = liftIO rp_GetVersion
{#fun rp_GetVersion  {} -> `String' #}

-- | textual representation of error code
{#fun rp_GetError as getError  {`RpError'} -> `String' #}


-- | Sets digital pins to default values. Pins DIO1_P - DIO7_P, RP_DIO0_N - RP_DIO7_N are set al OUTPUT and to LOW. LEDs are set to LOW/OFF
setPinState :: DigitalPin -> PinState -> RpMonad ()
setPinState = mapr2 ( errorMap ft1) rp_DpinSetState
{#fun rp_DpinSetState { `DigitalPin' , `PinState' } -> `RpError' #}

-- | Get pins enabled values
getPinState :: DigitalPin -> RpMonad PinState
getPinState = mapr1 ( errorMap ft2) rp_DpinGetState
{#fun rp_DpinGetState { `DigitalPin' ,  alloca- `PinState' peekEnum* } -> `RpError' #}




-- | Sets digital input output pin direction. LED pins are already automatically set to the output direction,
-- and they cannot be set to the input direction. DIOx_P and DIOx_N are must set either output or input direction
-- before they can be used. When set to input direction, it is not allowed to write into these pins.
setPinDirection :: DigitalPin -> PinDirection -> RpMonad ()
setPinDirection = mapr2 ( errorMap ft1) rp_DpinSetDirection
{#fun rp_DpinSetDirection { `DigitalPin' , `PinDirection' } -> `RpError' #}

-- gets digital input output pin direction
getPinDirection :: DigitalPin  -> RpMonad PinDirection
getPinDirection = mapr1 ( errorMap ft2) rp_DpinGetDirection
{#fun rp_DpinGetDirection { `DigitalPin' , alloca- `PinDirection' peekEnum* } -> `RpError' #}

-- | Sets analog pins to default values. Output pins are set to 0 V.
analogPinsReset ::  RpMonad ()
analogPinsReset = mapr0 ( errorMap ft1) rp_ApinReset
{#fun rp_ApinReset  {} -> `RpError' #}


-- | Gets value from analog pin in volts.
getPinValue ::  AnalogPin -> RpMonad CFloat
getPinValue = mapr1 ( errorMap ft2) rp_ApinGetValue
{#fun rp_ApinGetValue  { `AnalogPin' ,  alloca- `CFloat' peek* } -> `RpError' #}

-- | Gets raw value from analog pin.
getPinValueRaw ::  AnalogPin -> RpMonad Integer
getPinValueRaw = mapr1 ( errorMap ft2) rp_ApinGetValueRaw
{#fun rp_ApinGetValueRaw  { `AnalogPin' ,  alloca- `Integer' peekInt* } -> `RpError' #}

-- | Sets value in volts on analog output pin
setPinValue ::  AnalogPin -> CFloat -> RpMonad ()
setPinValue = mapr2 ( errorMap ft1) rp_ApinSetValue
{#fun rp_ApinSetValue { `AnalogPin' ,  `CFloat'} -> `RpError' #}

-- | Sets raw value on analog output pin.
setPinValueRaw ::  AnalogPin -> Int -> RpMonad ()
setPinValueRaw = mapr2 ( errorMap ft1) rp_ApinSetValueRaw
{#fun rp_ApinSetValueRaw { `AnalogPin' , `Int'} -> `RpError' #}

-- | Gets range in volts on specific pin
getPinRange ::  AnalogPin ->  RpMonad (CFloat,CFloat)
getPinRange = mapr1 ( errorMap ft3) rp_ApinGetRange
{#fun rp_ApinGetRange  { `AnalogPin' ,  alloca- `CFloat' peek* ,  alloca- `CFloat' peek* } -> `RpError' #}


-- | Sets the decimation used at acquiring signal. There is only a set of pre-defined decimation
setDecimation ::  Decimation ->  RpMonad ()
setDecimation = mapr1 ( errorMap ft1) rp_AcqSetDecimation
{#fun rp_AcqSetDecimation {`Decimation'} -> `RpError' #}

-- | Gets the decimation used at acquiring signal.
getDecimation ::  RpMonad Decimation
getDecimation = mapr0 ( errorMap ft2) rp_AcqGetDecimation
{#fun rp_AcqGetDecimation  {alloca- `Decimation' peekEnum*} -> `RpError' #}

-- | Gets the decimation factor used at acquiring signal in a numerical form.
getDecimationFactor ::  RpMonad Integer
getDecimationFactor = mapr0 ( errorMap ft2) rp_AcqGetDecimationFactor
{#fun rp_AcqGetDecimationFactor {alloca- `Integer' peekInt*} -> `RpError' #}

-- | Sets the sampling rate for acquiring signal.
setSamplingRate ::  SamplingRate -> RpMonad ()
setSamplingRate = mapr1 ( errorMap ft1) rp_AcqSetSamplingRate
{#fun rp_AcqSetSamplingRate  {`SamplingRate'} -> `RpError' #}

-- | Gets the sampling rate for acquiring signal
getSamplingRate ::  RpMonad SamplingRate
getSamplingRate = mapr0 ( errorMap ft2) rp_AcqGetSamplingRate
{#fun rp_AcqGetSamplingRate { alloca- `SamplingRate' peekEnum* } -> `RpError' #}
